<resources>
    <!--TODO (2) organize by usecase -->
    <string name="app_name">RecipeFind</string>
    <string name="app_title">Let\'s cook!</string>
    <string name="main_browse">Browse for ideas</string>
    <string name="search_ingredients">I have these ingredients</string>
    <string name="title_browse">Browse</string>
    <string name="title_search">Search</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="enter_ingredients">Enter ingredients or recipe here</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="website">Website</string>
    <string name="url">somesitename</string>
    <string name="servings">Servings</string>
    <string name="ingredients">What you will need</string>
    <string name="Directions">How to make it</string>
    <string name="explore_ideas">Explore Ideas</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="starters">Starters</string>
    <string name="main">Main</string>
    <string name="dessert">Dessert</string>
    <string name="indian">Indian</string>
    <string name="italian">Italian</string>
    <string name="chinese">Chinese</string>
</resources>