<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/browse_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/explore_ideas"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_breakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breakfast"
        app:layout_constraintEnd_toStartOf="@+id/btn_lunch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/browse_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_lunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lunch"
        app:layout_constraintEnd_toStartOf="@+id/btn_dinner"
        app:layout_constraintStart_toEndOf="@+id/btn_breakfast"
        app:layout_constraintTop_toBottomOf="@+id/browse_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_lunch"
        app:layout_constraintTop_toBottomOf="@+id/browse_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_starters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starters"
        app:layout_constraintEnd_toStartOf="@+id/btn_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_breakfast" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main"
        app:layout_constraintEnd_toStartOf="@+id/btn_starters"
        app:layout_constraintStart_toEndOf="@+id/btn_dessert"
        app:layout_constraintTop_toBottomOf="@+id/btn_lunch" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dessert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_main"
        app:layout_constraintTop_toBottomOf="@+id/btn_dinner" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_indian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indian"
        app:layout_constraintEnd_toStartOf="@+id/btn_italian"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_starters" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_italian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/italian"
        app:layout_constraintEnd_toStartOf="@+id/btn_indian"
        app:layout_constraintStart_toEndOf="@+id/btn_chinese"
        app:layout_constraintTop_toBottomOf="@+id/btn_main" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_chinese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chinese"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_italian"
        app:layout_constraintTop_toBottomOf="@+id/btn_dessert" />

</androidx.constraintlayout.widget.ConstraintLayout>