<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.example.android.recipefind.ui.home.HomeFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_browse" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.android.recipefind.ui.dashboard.DashboardFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.example.android.recipefind.ui.notifications.NotificationsFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />
</navigation>