<?xml version="1.0" encoding="utf-8"?>

<!-- RecyclerView + ListItemView for recipes displayed-->



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_recyclerview"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="4dp"
    android:paddingTop="4dp"
    >

    <ImageView
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:id="@+id/recipeImageView"
        android:src="@drawable/food"
        android:scaleType="centerCrop"
        android:padding="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff"
        android:padding="10dp">

        <TextView
            android:id="@+id/recipeNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:text="@string/recipe_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/tv_nameOfWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textSize="12sp"/>


        <TextView
            android:id="@+id/tv_urlOfWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:textSize="12sp"/>


        <ImageView
            android:id="@+id/save_recipe_listview"
            android:layout_width="15dp"
            android:layout_height="15dp"
            app:srcCompat="@drawable/ic_heart_black"
            android:layout_gravity="end"
            android:layout_padding="20dp"
            />

    </LinearLayout>


</LinearLayout>
